# brian-desktop

./: .env.example  .gitignore  .gitmodules  .taurignore  AGENTS.md  CONTRACTS_VERSION  Cargo.toml  README.md  desktop_companion_design_3042ed74.plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
contracts/: README.md
contracts/fixtures/: parity_manifest.json
crates/core-auth/: Cargo.toml
crates/core-auth/src/: client.rs  config.rs  device.rs  lib.rs  oauth.rs  session.rs  workspace.rs
crates/core-contracts/: Cargo.toml  build.rs  desktop_widget_catalog.json
crates/core-contracts/src/: contract.rs  kinds.rs  lib.rs  models.rs  paths.rs  widget_catalog.rs
crates/core-db/: Cargo.toml
crates/core-db/src/: commands.rs  desktop_layout.rs  layout.rs  lib.rs  local_prefs.rs  projections.rs  repository.rs  row_mapping.rs  schema.rs
crates/core-mcp/: Cargo.toml
crates/core-mcp/src/: lib.rs
crates/core-sync/: Cargo.toml
crates/core-sync/src/: error.rs  lib.rs  pull.rs  push.rs  service.rs
docs/: ARCHITECTURE.md  PLAN.md  SETUP.md
scripts/: bootstrap.ps1  generate-placeholder-icons.py  generate-theme-presets.mjs  sync-parity-manifest.py
src/: auth.ts  dashboard.ts  main.ts  main.tsx  marketplace.ts  marketplace.tsx  styles.css  sync-panel.tsx  timeline.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  companion.rs  lib.rs  main.rs
src/api/: companion.ts
src/assist/: assist-panel.ts  assist-state.ts  assist-types.ts
src/components/: glass-card.ts  home-header.ts
src/layout/: dashboard-grid.ts  grid-layout-engine.ts  grid-metrics.test.ts  grid-metrics.ts
src/react/: AddWidgetDrawer.tsx  AssistWidget.tsx  BrowserWidget.tsx  GridToolbar.tsx  IdeWidget.tsx  MarketplacePanel.tsx  NotebookWidget.tsx  SyncPanelToolbar.tsx  TitlebarControls.tsx  mount.tsx
src/shell/: dock-shell.ts  workbench.tsx
src/styles/: components.css  shell.css  tokens.css  tremor.css
src/theme/: color-utils.ts  presets.ts  theme-manager.ts  types.ts
src/ui/: BrianBadge.tsx  BrianButton.tsx  BrianCard.tsx  BrianInput.tsx  BrianLabel.tsx  BrianSelect.tsx  BrianSwitch.tsx  cn.ts  index.ts
src/utils/: markdown-preview.ts
