[package]
name = "core-contracts"
description = "CORE agent contracts vendored from vendor/core (read-only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
walkdir = "2"
