[package]
name = "core-mcp"
description = "Brian ASSIST MCP orchestrator + desktop OS tool tier (preview/confirm)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
